--- a/src/components/main/main.css
+++ b/src/components/main/main.css
@@ -6,5 +6,4 @@
 .row {
     width: auto;
     max-width: 1200px;
-    border: 1px solid hotpink;
 }
